equals update